--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ const personalImageAlt = "Joseba Gómez"
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="/public/assets/fotocv.jpg"
+      src="/dist/assets/fotocv.jpg"
       alt={personalImageAlt}
     />
     <a
