Correcion imagenes Netlify

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ const personalImageAlt = "Joseba Gómez"
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="/dist/assets/fotocv.jpg"
+      src="https://github.com/JosebaGmz/Porfolio.JG/blob/main/public/assets/fotocv.jpg?raw=true"
       alt={personalImageAlt}
     />
     <a
