--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -30,7 +30,7 @@ const PROJECTS = [
       "Aplicación de Compra Venta online de zapatillas creada en Flutter y FireBase como metodo de base de datos NoSQL orientada a los documentos.",
     link: "https://proyecto-final-dam-joseba.web.app/",
     github: "https://github.com/JosebaGmz/Proyecto-Final",
-    image: "/dist/assets/TFG.webp",
+    image: "https://raw.githubusercontent.com/JosebaGmz/Porfolio.JG/main/public/assets/TFG.webp",
     tags: [TAGS.FLUTTER, TAGS.FIREBASE],
   },
 ]
