--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -38,24 +38,22 @@ const PROJECTS = [
     github: "https://github.com/JosebaGmz/Proyecto-Final",
     image: "https://raw.githubusercontent.com/JosebaGmz/Porfolio.JG/main/public/assets/TFG.webp",
     tags: [TAGS.FLUTTER, TAGS.FIREBASE],
-    backEnd: "https://github.com/JosebaGmz/Proyecto-Final"
   },
   {
     title: "Proyecto CRUD - Gestión de Inventarios",
     description:
       "Aplicación de Gestión de inventarios creada en Java, Mysql, Spring Boot y Angular con consultas HttpRequest GET, PUT, DELETE, POST.",
-    link: "ew",
-    github: "https://github.com/JosebaGmz/ProyectoGinventariosFrontEnd",
+    link: "",
+    github: "https://github.com/JosebaGmz/ProyectoGinventarios",
     image: "https://raw.githubusercontent.com/JosebaGmz/Porfolio.JG/main/public/assets/GIProyect.png",
     tags: [TAGS.JAVA, TAGS.ANGULAR],
-    backEnd: "https://github.com/JosebaGmz/ProyectoGinventariosBackEnd"
   },
 ]
 ---
 
 <div class="flex flex-col gap-y-16">
   {
-    PROJECTS.map(({ image, title, description, tags, link, github, backEnd }) => (
+    PROJECTS.map(({ image, title, description, tags, link, github }) => (
     <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0">
   <div class="w-full md:w-1/2">
     <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
@@ -94,12 +92,6 @@ const PROJECTS = [
             <LinkButton href={link}>
               <Link class="size-4" />
               Preview
-            </LinkButton>
-          )}
-          {backEnd &&(
-            <LinkButton href={backEnd}>
-              <GitHubIcon class="size-6"/>
-              BackEnd
             </LinkButton>
           )}
         </footer>
