--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -48,6 +48,15 @@ const PROJECTS = [
     image: "https://raw.githubusercontent.com/JosebaGmz/Porfolio.JG/main/public/assets/GIProyect.png",
     tags: [TAGS.JAVA, TAGS.ANGULAR],
   },
+  {
+    title: "Ejercicios Logica en Java",
+    description:
+      "Solución de ejercicios de logica en java realizado por mi en la pagina web de aprendizaje Exercism.",
+    link: "",
+    github: "https://github.com/JosebaGmz/EjerciciosLogicosJava",
+    image: "https://i.ytimg.com/vi/Xgrm-5_2mEA/maxresdefault.jpg",
+    tags: [TAGS.JAVA],
+  },
 ]
 ---
 
