--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -54,7 +54,7 @@ const PROJECTS = [
       "Solución de ejercicios de logica en java realizado por mi en la pagina web de aprendizaje Exercism.",
     link: "",
     github: "https://github.com/JosebaGmz/EjerciciosLogicosJava",
-    image: "https://i.ytimg.com/vi/Xgrm-5_2mEA/maxresdefault.jpg",
+    image: "https://www.magisnet.com/wp-content/uploads/2024/01/Imagen-Java.jpg",
     tags: [TAGS.JAVA],
   },
 ]
