Experienca colaborador añadida

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,8 +1,16 @@
 ---
 import ExperienceItem from "./ExperienceItem.astro";
 const EXPERIENCE = [
+  {
+    date: "jun. 2024 - actual.",
+    title: "Desarrollador de software || Colaborador en Eurekamps",
+    company: "Eurekamps",
+    description:
+      "Participación en la creación de contenidos educativos sobre Flutter, Firebase, Android Studio y Git. Colaboración en la planificación y estructuración de contenido. Apoyo técnico y realización de pruebas de las aplicaciones desarrolladas para los tutoriales.",
+    link: "https://www.linkedin.com/company/eurekamps/",
+  },
 {
-    date: "abr. 2024 - jun.2024 . 3 meses",
+    date: "abr. 2024 - jun.2024. 3 meses",
     title: "Desarrollador de software",
     company: "FRESIA SOFTWARE SOLUTIONS",
     description:
